--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,10 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0",
+        "php": ">=7.2",
+        "psr/log": "^1.0 || ^2.0 || ^3.0"
         "ext-curl": "*",
-        "ext-json": "*",
-        "psr/log": "^1.0.0"
+        "ext-json": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8.35"
@@ -26,3 +26,4 @@
         }
     }
 }
+
