--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     ],
     "require": {
         "php": ">=7.2",
-        "psr/log": "^1.0 || ^2.0 || ^3.0"
+        "psr/log": "^1.0 || ^2.0 || ^3.0",
         "ext-curl": "*",
         "ext-json": "*"
     },
@@ -26,4 +26,5 @@
         }
     }
 }
+
 
